#  -------------------------------------------------------------------------
#  Copyright (C) 2018 BMW Car IT GmbH
#  -------------------------------------------------------------------------
#  This Source Code Form is subject to the terms of the Mozilla Public
#  License, v. 2.0. If a copy of the MPL was not distributed with this
#  file, You can obtain one at https://mozilla.org/MPL/2.0/.
#  -------------------------------------------------------------------------

ADD_SUBDIRECTORY(1_helloWorld)
ADD_SUBDIRECTORY(2_cube)
ADD_SUBDIRECTORY(3_localAnimation)
ADD_SUBDIRECTORY(4_remoteAnimation)
ADD_SUBDIRECTORY(5_text)
ADD_SUBDIRECTORY(6_renderer)
ADD_SUBDIRECTORY(7_embeddedCompositing)
ADD_SUBDIRECTORY(8_dataLinking)
ADD_SUBDIRECTORY(9_contentPersistation)
